kubernetes/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: flask-staging.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: flask
              port:
                number: 5000
